# pytranscode

./: Cargo.toml  Cargo.toml.bak
lib/pytranscode-test/: Cargo.toml  build.rs
lib/pytranscode-test/src/: lib.rs
lib/pytranscode-test/test-files/: helloworld.txt
src/: codegen.rs  lib.rs  lib.rs.bak  main.rs  pystd.rs  test3.py  test3.rs
tests/: common.rs
